Update tests to account for the expanded find command